// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements MqttOperationBindingElement should refract to semantic ApiDOM tree 1`] = `
(MqttOperationBindingElement
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (StringElement)))
`;

exports[`refractor elements MqttOperationBindingElement given messageExpiryInterval field of type SchemaElement should refract to semantic ApiDOM tree 1`] = `
(MqttOperationBindingElement
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (StringElement)))
`;

exports[`refractor elements MqttOperationBindingElement given messageExpiryInterval field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(MqttOperationBindingElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (StringElement)))
`;
